# Simple_perceptron

./: CMakeLists.txt
src/: main.cpp  perceptron.cpp  perceptron.hpp
